terminos y condiciones y aviso de privacidad

--- a/src/app/components/pago/pago.component.html
+++ b/src/app/components/pago/pago.component.html
@@ -38,8 +38,8 @@
       />
       <label for="terms">
         He leído y estoy de acuerdo con los
-        <a href="#" class="terms-link">Términos y Condiciones</a> y
-        <a href="#" class="terms-link">Aviso de Privacidad.</a>
+      <a href="/public/assets/archivos/TÉRMINOSYCONDICIONES.pdf" class="terms-link" target="_blank">Términos y Condiciones</a> y
+      <a href="/public/assets/archivos/AvisoDePrivacida.pdf" class="terms-link" target="_blank">Aviso de Privacidad</a>
       </label>
     </div>
 
