terminos y condiciones y aviso de privacidad

--- a/src/app/components/pago/pago.component.html
+++ b/src/app/components/pago/pago.component.html
@@ -36,11 +36,12 @@
         name="terms"
         required
       />
-      <label for="terms">
-        He leído y estoy de acuerdo con los
-      <a href="/public/assets/archivos/TÉRMINOSYCONDICIONES.pdf" class="terms-link" target="_blank">Términos y Condiciones</a> y
-      <a href="/public/assets/archivos/AvisoDePrivacida.pdf" class="terms-link" target="_blank">Aviso de Privacidad</a>
-      </label>
+ <label for="terms">
+  He leído y estoy de acuerdo con los
+  <a href="/src/assets/archivos/TÉRMINOSYCONDICIONES.pdf" class="terms-link" target="_blank">Términos y Condiciones</a> y
+  <a href="assets/archivos/AvisoDePrivacida.pdf" class="terms-link" target="_blank">Aviso de Privacidad</a>
+</label>
+
     </div>
 
     <div id="stripe-button-container" *ngIf="termsAccepted">
