logos: visa, mastercard, amex

--- a/src/app/components/pago/pago.component.html
+++ b/src/app/components/pago/pago.component.html
@@ -127,9 +127,9 @@
     <div class="payment-methods">
       <p>Métodos de pago aceptados:</p>
       <div class="method-icons">
-        <img src="assets/images/visa.svg" alt="Visa" class="method-icon">
-        <img src="assets/images/mastercard.svg" alt="Mastercard" class="method-icon">
-        <img src="assets/images/amex.svg" alt="American Express" class="method-icon">
+        <img src="assets/image/visa.png" alt="Visa" class="method-icon">
+        <img src="assets/image/mastercard.png" alt="Mastercard" class="method-icon">
+        <img src="assets/image/americanexpress.png" alt="American Express" class="method-icon">
       </div>
     </div>
   </div>
