cambio de estilo visual index de dsm a osmi

--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -6,8 +6,8 @@
 <nav class="navbar">
   <div class="container">
     <a routerLink="/" class="navbar-brand">
-      <img src="/assets/image/founder.jpg" alt="DSM Logo" class="nav-logo">
-      <span>DSM FAMILIA</span>
+      <img src="/assets/image/founder.png" alt="DSM Logo" class="nav-logo">
+      <span>ticket</span>
     </a>
     
     <div class="menu-btn" (click)="toggleMenu()">
@@ -27,8 +27,8 @@
 <header class="hero" id="inicio">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <h1>IMPULSANDO EL TALENTO URBANO</h1>
-    <p>Descubre la nueva generación musical en México</p>
+    <h1>Reserva aqui</h1>
+    <p>Descubre todos nuestros eventos</p>
       <a (click)="navigateToBoletera()" class="btn btn-outline">Próximos Eventos</a>
   </div>
   
@@ -41,32 +41,31 @@
   <div class="container">
     <div>
       <h2>NUESTRA HISTORIA</h2>
-      <p>Conoce el origen de DSM Familia</p>
+      <p>Conoce el origen de osmi</p>
     </div>
     
     <div class="about-content">
       <div>
-        <h3>El Sueño de Iker</h3>
-        <p>DSM Familia nace en Guadalajara en 2024 como una iniciativa genuina para impulsar el talento urbano juvenil. Creado por jóvenes apasionados por la música y comprometidos con sus raíces, este sello busca construir puentes entre artistas emergentes, audiencias y marcas que creen en el poder del arte para transformar realidades.</p>
-        <p>Con esfuerzo, respeto y colaboración, DSM Familia se ha convertido en una plataforma seria y auténtica que promueve cultura, comunidad y nuevas voces musicales.</p>
-        
+        <h3>osmi</h3>
+        <p>osmi nace en Guadalajara en 2024 como una reserva de boletos para eventos musicales. Creado por francisco d zamora <p>
+          
         <div class="mission-vision">
           <div>
             <i class="fas fa-bullseye"></i>
             <h4>Misión</h4>
-            <p>Impulsar el talento juvenil y apoyar a jóvenes mexicanos en la realización de sus sueños musicales.</p>
+            <p>lograr llenar todos los eventos de los artistas con el mejor maketing.</p>
           </div>
           <div>
             <i class="fas fa-eye"></i>
             <h4>Visión</h4>
-            <p>Ser el principal sello musical de México reconocido por transformar el panorama urbano.</p>
+            <p>Ser la principal boletera de México reconocida por transformar el panorama de compra de boletos.</p>
           </div>
         </div>
       </div>
       
       <div>
         <div class="image-frame">
-          <img src="/assets/image/founder.jpg" alt="Fundador de DSM Familia" loading="lazy">
+          <img src="/assets/image/founder.png" alt="Fundador de DSM Familia" loading="lazy">
         </div>
       </div>
     </div>
